--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
-    "next": "14.0.0",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
