--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
-    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
