--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-lottie": "^1.2.10",
     "react-query": "^3.39.3",
     "request-ip": "^3.3.0",
     "tailwind-merge": "^2.6.0",
