--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
     "react-query": "^3.39.3",
+    "react-resizable-panels": "^2.1.7",
     "request-ip": "^3.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
