--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "ioredis": "^5.5.0",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
