--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
     "react": "^18",
-    "react-day-picker": "^8.10.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-lottie": "^1.2.10",
