--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-lottie": "^1.2.10",
     "react-query": "^3.39.3",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.1",
     "request-ip": "^3.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
