--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-table": "^8.21.2",
     "bcryptjs": "^2.4.3",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "handlebars": "^4.7.8",
     "ioredis": "^5.5.0",
     "iron-session": "^8.0.4",
     "lucide-react": "^0.474.0",
