--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-table": "^8.21.2",
     "bcryptjs": "^2.4.3",
-    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -38,6 +37,7 @@
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
+    "puppeteer": "^24.8.1",
     "react": "^18",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/puppeteer": "^5.4.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
